lke/kubernetes/api-nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingressClassName: "nginx"
spec:
  rules:
    - host: "*.ip.linodeusercontent.com"
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: spring-boot-api
              port:
                number: 8080
